Added PipesRegister IF/ID, 1/2 ID/EX

--- a/Practica3/ModelSim/db/MIPS_Processor.lpc.html
+++ b/Practica3/ModelSim/db/MIPS_Processor.lpc.html
@@ -752,6 +752,70 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >PipeRegister_MEM_WB</TD>
+<TD >67</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >64</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >PipeRegister_EX_MEM</TD>
+<TD >67</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >64</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >PipeRegister_ID_EX</TD>
+<TD >152</TD>
+<TD >88</TD>
+<TD >0</TD>
+<TD >88</TD>
+<TD >149</TD>
+<TD >88</TD>
+<TD >88</TD>
+<TD >88</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >PipeRegister_IF_ID</TD>
+<TD >67</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >64</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >MUX_PCJump</TD>
 <TD >65</TD>
 <TD >0</TD>
